--- a/quiz-dragonball/src/Component/Quiz/Quiz.css
+++ b/quiz-dragonball/src/Component/Quiz/Quiz.css
@@ -3,7 +3,7 @@
     margin: auto;
     margin-top: 50px;
     background: transparent;
-    color: #ffff;
+    color: black;
     display: flex;
     flex-direction: column;
     gap: 3px;
@@ -40,7 +40,7 @@
     margin-bottom: 20px;
     font-size: 20px;
     cursor: pointer;
-    color: white;
+    color: black;
 }
 .container button {
     cursor: pointer;
