--- a/quiz-dragonball/src/index.css
+++ b/quiz-dragonball/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  height: 100vh;
-  background-image: url('image/dbz.jpg');
+  height: fit-content;
+  /* background-image: url('image/dbz.jpg'); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100em;
