--- a/quiz-dragonball/src/Component/Quiz/Quiz.css
+++ b/quiz-dragonball/src/Component/Quiz/Quiz.css
@@ -22,13 +22,13 @@
 .container h1 {
     font-weight: 500;
     text-align: center;
-    color: black;
+    color: white;
     
 }
 .container h2 {
     font-size: xx-large;
     font-weight: 500;
-    color: red;
+    color: white;
 }
 .container ul li {
     display: flex;
@@ -40,7 +40,7 @@
     margin-bottom: 20px;
     font-size: 20px;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 .container button {
     cursor: pointer;
