--- a/quiz-dragonball/src/index.css
+++ b/quiz-dragonball/src/index.css
@@ -4,7 +4,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-image: url('./image/dbz.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('./image/dbz.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
